* Widget MySystasks: new widget for user to display systasks perform on user projects (TrivialDev)
* Widget ProjectlatestArtifact: new widget for project to display the 5 more recent artifacts (TrivialDev)
* Widget ProjectScmStats: new widget for project to display SCM stats (TrivialDev)
* Widget HomeRss: new widget for Forge home page to display RSS flow (TrivialDev)

FusionForge 6.0.5:
* Docman: fix XSS attack (Roland Mas)
* Forum: fix redirection cache [#835] & [#836] (TrivialDev)
* FRS: fix error message on file upload with accent in filename [#838] (TrivialDev)
* Plugin SCM SVN: fix activity when SVN repository is private [#813] (TrivialDev)
* Plugin SCM SVN: fix support old svn clients (Inria)
* Plugin SCM Git: fix activity when Git repository is private [#825] (TrivialDev)
* Plugin MoinMoin: fix httpd permissions & 404 on CentOS [#809] (TrivialDev)
* Project Task: fix CSV import [#823] (Peter Katzmann)
* Project Task: fix CSV import [#823]: add missing translation, add missing category in no header import,
                fix start/end date format description (TrivialDev)
* Tracker: fix artifact deletion with votes [#819] (TrivialDev)
* Tracker: fix downloadcsv missing vote values [#828] (TrivialDev)
* SOAP: fix addArtifactFile [#833] (Philipp Keidel)
* SOAP: Security Fixes (Roland Mas)

FusionForge 6.0.4:
* Account Management System: fix sysCreateUser for UNIX: unix_gid dropped (TrivialDev)
* Accounts: do not accept digits-only user and group names, to avoid confusion with UID/GID in system commands (Inria)
* Accounts: drop redundant (and insecure) unsalted MD5 password hashes from the database (Inria)
* Accounts: trigger system replication when user changes password or shell (Inria)
* Accounts: passwords hashes: increase md5crypt salt length to 8; fix invalid Blowfish salt (Inria)
* Accounts: passwords hashes: add support for SHA256/SHA512 (Inria)
* Accounts: fix supported ssh keys types - again (Inria)